11月上旬内容整理

--- a/2017/11.md
+++ b/2017/11.md
@@ -1,9 +1,63 @@
 # 2017.11
 
+RxSwift总结
+----------
+
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+`ReactiveX`（`Reactive Extensions`）是通过可观察的流实现异步编程的一种`API`，它结合了观察者模式、迭代器模式和函数式编程的精华。`RxSwift`是`ReactiveX`编程思想的一种实现，几乎每一种语言都会有那么一个`Rx[xxxx]`框架，比如 `RxJava`，`RxJS` 等。Rx 可以概括为，对某些数据流（很广，可以是一些事件等）进行处理，使其变成可观察对象（`Observable`）序列，这样观察者（`observer`）就可以订阅这些序列【观察者模式】。然而对于订阅者来说（`observer`）某些选项（`items`）并不是自己需要的（需要过滤），某些选项（`items`）需要转换才能达到自己的目的【操作符 `filter`, `map` 等】。为了提升用户体验，或其它目的，有些操作需要放到特定的线程去执行，比如 UI 操作需要放到主线程，这就涉及到了调度器【调度器 `Scheduler`】。所以Rx可以这样概括，`Rx = Observables + LINQ + Schedulers`，其中 `LINQ（Language Integrated Query）`语言集成查询，比如那些操作符号。
+
+下图是 `RxSwift` 的简单的应用，从数组中找出 `Lefe_x` 并显示到 `Label` 上。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/1-1.JPG?raw=true)
+
+流程如下图所示：
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/1-2.JPG?raw=true)
+
+解决React Native引入realm导致编译卡顿问题
+----------
+
+在`React Native`项目中引入`realm`后，在编译阶段，网络状况不好的时候会卡在realm模块下载的地方。现象是如果在终端用`react-native run-ios`，则会卡在`Download realm-sync-cocoa-${version}.tar.xz`，如果是Xcode，则会卡在`Build ${ProjectName}: RealmJS`这一块。
+
+这主要是因为realm的库太大(`realm-sync-cocoa-${version}.tar.xz`包大概是50+M)。所以我们可以考虑把包先下载到本地，以减少每次编译的时间。
+
+1. 我们可以从`realm-cocoa`的[build.sh文件](https://github.com/realm/realm-cocoa/blob/master/build.sh#L289)中找到`realm-sync-cocoa-${version}.tar.xz`的下载地址(注：${version}是具体的版本号)，下载文件。
+2. 在命令行输入`getconf DARWIN_USER_TEMP_DIR`，获取文件下载的临时目录
+3. 将下载的文件拷贝到临时目录
+4. 这样基本就OK。
+
+如果还不行，则可以考虑以下操作：
+
+1. 修改下载的脚本代码了。找到`node_modules/realm/scripts/download_realm.js`；
+2. 找到`download()`函数，将其中的`saveFile()`函数作如下修改；
+
+```javascript
+function saveFile() {
+	if (process.stdout.isTTY) {
+		printProgress(response.body, parseInt(response.headers.get('Content-Length')), archive);
+	} else {
+		console.log(`Downloading ${archive}`);
+	}
+	
+	return new Promise((resolve) => {
+		// const file = fs.createWriteStream(destination);
+		// response.body.pipe(file).once('finish', () => file.close(resolve));
+		resolve();
+	}).then(() => fs.utimes(destination, lastModified, lastModified));
+}
+```
+
+最后运行`react-native run-ios`。
+
+参考
+
+1. [Core occasionally cannot be downloaded from China](https://github.com/realm/realm-cocoa/issues/2713)
+
 判断代码在哪个队列中运行
 ----------
 
-之前分享了可以用dispatch_queue_set_specific和dispatch_get_specific来判断代码是否运行在主队列上。除了这种方法外，还可以使用dispatch_queue_get_label获取当前队列的label，与主队列的label比较，如图代码所示：
+之前分享了可以用`dispatch_queue_set_specific`和`dispatch_get_specific`来判断代码是否运行在主队列上。除了这种方法外，还可以使用`dispatch_queue_get_label`获取当前队列的`label`，与主队列的`label`比较，如图代码所示：
 
 ```objc
 - (void)viewDidLoad {
@@ -21,7 +75,7 @@
 }
 ```
 
-主队列的label是com.apple.main-thread。当然也可以用这种方式来判断其它队列。全局队列的label与其QOS类型相关，label值主要有以下几个：
+主队列的`label`是`com.apple.main-thread`。当然也可以用这种方式来判断其它队列。全局队列的`label`与其`QOS`类型相关，`label`值主要有以下几个：
 
 ```objc
 com.apple.root.user-interactive-qos //
@@ -31,49 +85,28 @@ com.apple.root.utility-qos          // DISPATCH_QUEUE_PRIORITY_LOW
 com.apple.root.background-qos       // DISPATCH_QUEUE_PRIORITY_BACKGROUND
 ```
 
-我们可以使用dispatch_get_global_queue(qos_class_self(), 0)来获取代码所在的的全局队列，进而获取其label值。
+我们可以使用`dispatch_get_global_queue(qos_class_self(), 0)`来获取代码所在的的全局队列，进而获取其`label`值。
 
 参考
 
 1. [Get current dispatch queue?](https://stackoverflow.com/questions/17475002/get-current-dispatch-queue)
 
-React Native引入realm网络不好会卡
+通过导入DSYM使用Instruments做性能分析
 ----------
 
-在React Native项目中引入realm后，在编译阶段，网络状况不好的时候会卡在realm模块下载的地方。现象是如果在终端用react-native run-ios，则会卡在`Download realm-sync-cocoa-${version}.tar.xz`，如果是Xcode，则会卡在`Build ${ProjectName}: RealmJS`这一块。
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
 
-这主要是因为realm的库太大(realm-sync-cocoa-${version}.tar.xz包大概是50+M)。所以我们可以考虑把包先下载到本地，以减少每次编译的时间。
+通常情况下，使用 `Instruments` 做性能分析，看调用栈时，是能够直接看到对应方法调用堆栈的，而不是一串的地址，但这个前提是 Xcode 用编译过这个应用。如果是用同事或者打包服务器上的安装包做性能分析时，就无法看到对应的方法调用堆栈信息了，只能看到一串地址。这个时候可以通过导入 `dSYM` 的方式来查看对应的方法调用堆栈，方式如下（见图）：打开 `Instruments` -> `运行一遍你的应用` -> `停止` -> `File` -> `Symbols` -> `dSYM Path : Locate`即可。如下图所示：
 
-1. 我们可以从realm-cocoa的[build.sh文件](https://github.com/realm/realm-cocoa/blob/master/build.sh#L289)中找到`realm-sync-cocoa-${version}.tar.xz`的下载地址(注：${version}是具体的版本号)，下载文件。
-2. 在命令行输入`getconf DARWIN_USER_TEMP_DIR`，获取文件下载的临时目录
-3. 将下载的文件拷贝到临时目录
-4. 这样基本就OK。
+![图一](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/6-1.JPG?raw=true)
 
-如果还不行，则可以考虑以下操作：
+但是有些时候可能应用中包含 `extension`，则直接 `locate` 会提示无法定位到 dSYM 文件
 
-1. 修改下载的脚本代码了。找到node_modules/realm/scripts/download_realm.js；
-2. 找到download()函数，将其中的saveFile()函数作如下修改；
+> The specified path didn't locate a dSYM for any of the selected libraries.
 
-```javascript
-function saveFile() {
-            if (process.stdout.isTTY) {
-                printProgress(response.body, parseInt(response.headers.get('Content-Length')), archive);
-            } else {
-                console.log(`Downloading ${archive}`);
-            }
-            return new Promise((resolve) => {
-              // const file = fs.createWriteStream(destination);
-              // response.body.pipe(file).once('finish', () => file.close(resolve));
-              resolve();
-            }).then(() => fs.utimes(destination, lastModified, lastModified));
-        }
-```
+这个时候需要把你的 `dSYM.zip` 解压，右键显示其内容将对应的 `.app.dSYM` 拷出，然后 `locate` 到这个拷出的 `dSYM` 文件即可或者按照下图操作也是可行的。具体流程见图：
 
-最后运行`react-native run-ios`。
-
-参考
-
-1. [Core occasionally cannot be downloaded from China](https://github.com/realm/realm-cocoa/issues/2713)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/6-2.GIF?raw=true)
 
 
 Shell脚本在iOS中的应用
@@ -81,70 +114,56 @@ Shell脚本在iOS中的应用
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/3-1.PNG?raw=true)
+使用 Pod 的同学经常会遇到 `"error: The sandbox is not in sync with the Podfile.lock. Run 'pod install' or update your CocoaPods installation."` 错误，如下图所示。其实是 `[CP] Check Pods Manifest.lock` 这个脚本所起的作用。
 
-使用 Pod 的同学经常会遇到 `"error: The sandbox is not in sync with the Podfile.lock. Run 'pod install' or update your CocoaPods installation."` 错误，其实是 `[CP] Check Pods Manifest.lock` 这个脚本所起的作用。
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/5-1.PNG?raw=true)
 
-Pod 中有 Manifest.lock 和 Podfile.lock 这两个文件，只要这两个文件的内容不一样就会报错上面这个错误。Podfile.lock 是大家共用的文件（用来保证我们每个人的Pod库版本一样），而Manifest.lock是本地的文件（自己用）。图中这个脚本正是做这样的事情。
+Pod 中有 `Manifest.lock` 和 `Podfile.lock` 这两个文件，只要这两个文件的内容不一样就会报错上面这个错误。`Podfile.lock` 是大家共用的文件（用来保证我们每个人的Pod库版本一样），而 `Manifest.lock` 是本地的文件（自己用）。下图中这个脚本正是做这样的事情。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/3-2.PNG?raw=true)
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/5-2.PNG?raw=true)
 
-**解释下这个脚本：**    
-shell 脚本总是以：#!/bin/bash 或者 #!/bin/sh 开头，它主要告诉系统执行这个文件需要那个解释器，进入 /bin 目录下可以看到 bash 和 sh 解释器；
+### 解释下这个脚本
 
-- diff 命令：判断两个文件的不同，比如 diff /Users/lefe/Desktop/project/Kmart/Podfile.lock /Users/lefe/Desktop/project/Kmart/pods/Manifest.lock >~/Desktop/shell.log 比较两个文件的不同，并重定向到 shell.log 文件中；
-- \> 重定向符号，可以把输出命令输出到某个文件中而不是控制台；
-- echo 是脚本的输出，相当于 printf；
-- exit 1 退出，有了这个命令 Xcode 就会报错，你可以在 Xcode 中新建一个脚本，试试下面这个脚本：
+`shell` 脚本总是以：`#!/bin/bash` 或者 `#!/bin/sh` 开头，它主要告诉系统执行这个文件需要哪个解释器，进入 `/bin` 目录下可以看到 bash 和 sh 解释器；
 
+- `diff` 命令：判断两个文件的不同，比如 `diff /Users/lefe/Desktop/project/Kmart/Podfile.lock /Users/lefe/Desktop/project/Kmart/pods/Manifest.lock >~/Desktop/shell.log` 比较两个文件的不同，并重定向到 `shell.log` 文件中；
+- `>` 重定向符号，可以把输出命令输出到某个文件中而不是控制台；
+- `echo` 是脚本的输出，相当于 `printf`；
+- `exit 1` 退出，有了这个命令 Xcode 就会报错，你可以在 Xcode 中新建一个脚本，试试下面这个脚本：
+
+```shell
 echo "This is a test shell created by Lefe_x"
 exit 1
+```
 
-- $?： 指上条命令执行的结果，也就是 diff 执行的结果；
+- `$?：` 指上条命令执行的结果，也就是 `diff` 执行的结果；
 
 - 下面是 shell 中的 if 语句：
 
+```shell
 if 条件 ; then
 fi
+```
 
-**如何在终端执行脚本**   
-假如有个叫 podlgsk.sh 的脚本，只要给予它执行权限（chmod +x podlgsk.sh），注意只需要给一次执行权限就行，下次运行脚本时就不需要给予执行权限了，然后直接 ./podlgsk.sh 即可。
+### 如何在终端执行脚本
 
-**总结**    
-其实 Shell 脚本就是把一些 linux 命令组合到一起，经过一些处理（比如：if 判断，循环等）后所形成的文件。（不知道总结的是否恰当）
+假如有个叫 `podlgsk.sh` 的脚本，只要给予它执行权限（`chmod +x podlgsk.sh`），注意只需要给一次执行权限就行，下次运行脚本时就不需要给予执行权限了，然后直接 `./podlgsk.sh` 即可。
 
+### 小结
 
-RxSwift总结
-----------
+其实 `Shell` 脚本就是把一些 `linux` 命令组合到一起，经过一些处理（比如：if 判断，循环等）后所形成的文件。（不知道总结的是否恰当）
 
-**作者**: [Lefe_x](https://weibo.com/u/5953150140)
-
-ReactiveX（Reactive Extensions）是通过可观察的流实现异步编程的一种API，它结合了观察者模式、迭代器模式和函数式编程的精华。RxSwift是ReactiveX编程思想的一种实现，几乎每一种语言都会有那么一个Rx[xxxx]框架，比如 RxJava，RxJS 等。Rx 可以概括为，对某些数据流（很广，可以是一些事件等）进行处理，使其变成可观察对象（Observable）序列，这样观察者（observer）就可以订阅这些序列【观察者模式】。然而对于订阅者来说（observer）某些选项（items）并不是自己需要的（需要过滤），某些选项（items）需要转换才能达到自己的目的【操作符 filter, map 等】。为了提升用户体验，或其它目的，有些操作需要放到特定的线程去执行，比如 UI 操作需要放到主线程，这就涉及到了调度器【调度器 Scheduler】。所以Rx可以这样概括，Rx = Observables + LINQ + Schedulers，其中 LINQ（Language Integrated Query）语言集成查询，比如那些操作符号。
-
-图1是 RxSwift 的简单的应用，从数组中找出 Lefe_x 并显示到 Label 上。
-
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/4-1.JPG?raw=true)
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/4-2.JPG?raw=true)
 
 iOS10之后多边形绘制
 ----------
 
 **作者**: [Vong_HUST](https://weibo.com/VongLo)
 
-众所周知，对于一些多边形的绘制，我们可以使用 CAShapeLayer 配合 UIBezierPath，然后再用这个 layer 给 View 做 mask 即可。但是一种情况是不行的，对于 UIVisualEffectView，iOS10 之前 `self.blurView.layer.mask = someShapeLayer` 这一句是 ok 的，但是 iOS10 之后，这样设将无效，而应该使用 `self.blurView.maskView = maskView。`具体代码如图，[解释可参考](https://forums.developer.apple.com/thread/50854)
+众所周知，对于一些多边形的绘制，我们可以使用 `CAShapeLayer` 配合 `UIBezierPath`，然后再用这个 `layer` 给 `View` 做 `mask` 即可。但是一种情况是不行的，对于 `UIVisualEffectView`，iOS10 之前 `self.blurView.layer.mask = someShapeLayer` 这一句是 ok 的，但是 iOS10 之后，这样设将无效，而应该使用 `self.blurView.maskView = maskView`。具体代码如下图所示：
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/5-1.JPG?raw=true)
 
+详细解释可参考[这里](https://forums.developer.apple.com/thread/50854)
 
-通过导入DSYM使用Instruments做性能分析
-----------
 
-**作者**: [Vong_HUST](https://weibo.com/VongLo)
 
-通常情况下，使用 Instruments 做性能分析，看调用栈时，是能够直接看到对应方法调用堆栈的，而不是一串的地址，但这个前提是 Xcode 用编译过这个应用。如果是用同事或者打包服务器上的安装包做性能分析时，就无法看到对应的方法调用堆栈信息了，只能看到一串地址。这个时候可以通过导入 dSYM 的方式来查看对应的方法调用堆栈，方式如下（见图）：打开 Instruments--> 运行一遍你的应用-->停止-->File-->Symbols-->dSYM Path 【Locate】即可。
-
-![图一](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/6-1.JPG?raw=true)
-
-但是有些时候可能应用中包含 extension，则直接 locate 会提示无法定位到 dSYM 文件【The specified path didn't locate a dSYM for any of the selected libraries.】这个时候需要把你的 dSYM.zip 解压，右键显示其内容将对应的 .app.dSYM 拷出，然后 locate 到这个拷出的 dSYM 文件即可或者按照图2操作也是可行的。具体流程见图：
-
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/6-2.GIF?raw=true)
