RxSwift 图片代码替换

--- a/2017/11.md
+++ b/2017/11.md
@@ -9,7 +9,29 @@ RxSwift总结
 
 下图是 `RxSwift` 的简单的应用，从数组中找出 `Lefe_x` 并显示到 `Label` 上。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/1-1.JPG?raw=true)
+```Swift
+    override func viewDidLoad() {
+        super.viewDidLoad()
+        DispatchQueue.global().async {
+            self.from()
+        }
+    }
+    
+    func from() {
+        Observable.from(["Lefe", "Lefe_x", "lefex", "wsy", "Rx"])
+            .subscribeOn(MainScheduler.instance)
+            .filter({ (text) -> Bool in
+                return text == "Lefe_x"
+            })
+            .map({ (text) -> String in
+                return "我的新浪微博是: " + text
+            })
+            .subscribe(onNext: { [weak self] (text) in
+                self?.nickNameLabel.text = text
+            })
+            .disposed(by: disposeBag)
+    }
+```
 
 流程如下图所示：
 
