Shell 脚步图片代码换成代码

--- a/2017/11.md
+++ b/2017/11.md
@@ -142,9 +142,19 @@ Shell脚本在iOS中的应用
 
 Pod 中有 `Manifest.lock` 和 `Podfile.lock` 这两个文件，只要这两个文件的内容不一样就会报错上面这个错误。`Podfile.lock` 是大家共用的文件（用来保证我们每个人的Pod库版本一样），而 `Manifest.lock` 是本地的文件（自己用）。下图中这个脚本正是做这样的事情。
 
-![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/5-2.PNG?raw=true)
+```shell
+diff "${PODS_PODFILE_DIR_PATH}/Podfile.lock" "${PODS_ROOT}/Manifest.lock" > /dev/null
+if [ $? != 0 ] ; then
+    # print error to STDERR
+    echo "error: The sandbox is not in sync with the Podfile.lock. Run 'pod install' or update your CocoaPods installation." >&2
+    exit 1
+fi
+# This output is used by Xcode 'outputs' to avoid re-running this script phase.
+echo "SUCCESS" > "${SCRIPT_OUTPUT_FILE_0}"
 
-### 解释下这个脚本
+```
+
+**解释下这个脚本**
 
 `shell` 脚本总是以：`#!/bin/bash` 或者 `#!/bin/sh` 开头，它主要告诉系统执行这个文件需要哪个解释器，进入 `/bin` 目录下可以看到 bash 和 sh 解释器；
 
@@ -167,11 +177,11 @@ if 条件 ; then
 fi
 ```
 
-### 如何在终端执行脚本
+**如何在终端执行脚本**
 
 假如有个叫 `podlgsk.sh` 的脚本，只要给予它执行权限（`chmod +x podlgsk.sh`），注意只需要给一次执行权限就行，下次运行脚本时就不需要给予执行权限了，然后直接 `./podlgsk.sh` 即可。
 
-### 小结
+**小结**
 
 其实 `Shell` 脚本就是把一些 `linux` 命令组合到一起，经过一些处理（比如：if 判断，循环等）后所形成的文件。（不知道总结的是否恰当）
 
