11月第三周内容整理

--- a/2017/11.md
+++ b/2017/11.md
@@ -197,5 +197,273 @@ iOS10之后多边形绘制
 
 详细解释可参考[这里](https://forums.developer.apple.com/thread/50854)
 
+iOS 11中隐藏section头尾的实现
+----------
+
+**作者**: [iOS_OneByte](https://weibo.com/u/5549095051)
+
+iOS 中 `UITableView` 中有一种比较常用的样式 `UITableViewStyleGrouped`。有时我们要隐去 `section` 头尾的话，经常实现如下：
+
+```objc
+- (CGFloat)tableView:(UITableView *)tableView heightForHeaderInSection:(NSInteger)section
+{
+    return 0.1f;
+}
+
+- (CGFloat)tableView:(UITableView *)tableView heightForFooterInSection:(NSInteger)section
+{
+    return 0.1f;
+}
+```
+
+如果只实现这2段代码的话，在 `iOS 11` 之前是不会出现问题的，但 `iOS 11` 之后需要同时实现如下：
+
+```objc
+- (UIView *)tableView:(UITableView *)tableView viewForHeaderInSection:(NSInteger)section
+{
+    return nil;
+}
+
+-(UIView *)tableView:(UITableView *)tableView viewForFooterInSection:(NSInteger)section
+{
+    return nil;
+}
+```
+
+`Base SDK` 路径设置： `Xcode` < `Build Settings` <  `Base SDK`
+
+`Base SDK`：指得是当前编译应用的和构建 `.ipa` 的 `SDK` 的版本，并且手机的 `SDK` 版本是向前兼容。
+
+小程序和iOS数据绑定
+------------------
+
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+在微信小程序中，开发 UI 功能模块，绝对比的上 iOS 原生开发。它已经提供了一套成熟的数据绑定方式，而不需要引入其它库。而在 iOS 中我们同样可以做数据绑定，然而需要花费一定的时间来学习一些数据绑定的框架，比如 RAC，RxSwift。这里主要以 `RxSwift` 为例说明。在小程序中，假如实现一个功能，点击按钮修改昵称，可以这样实现：
+
+```objc
+Page({
+  data: {
+    nickName: 'Lefe_x'
+  },
+  
+  changeNickNameAction: function () {
+    this.setData ({
+      nickName: 'Lefe'
+    })
+  }
+})
+```
+
+直接修改数据源 `data` 中的 `nickName` 即可让新的昵称(Lefe)显示到控件上。看看具体的数据绑定实现：
+
+```xml
+<view class="main-container">
+   {{nickName}}
+   修改昵称
+</view>
+```
+
+`nickName` 与一个 `Text` 的控件绑定到了一起，这样只要 `nickName` 发生改变，就会显示到 `Text` 控件上。而在 iOS 中我们可以使用 `RxSwift` 做数据绑定。比如：当 `nickNameTextField` 输入内容后，将显示在 `nickNameLabel` 上。
+
+```objc
+class MiniViewController: UIViewController {
+    
+    let disposeBag = DisposeBag()
+
+    @IBOutlet weak var nickNameTextField: UITextField!
+    @IBOutlet weak var nickNameLabel: UILabel!
+    
+    override func viewDidLoad() {
+        super.viewDidLoad()
+
+        nickNameTextField.rx.text.bind(to: nickNameLabel.rx.text).disposed(by: disposeBag)
+    }
+}
+```
+
+ViewController关联XIB文件时初始化方法的调用
+----------
+
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+在新建一个 `ViewController` 文件时，如果同时也勾选了 `Also create XIB file`，那么`ViewController *viewController = [[ViewController alloc] init]` 得到的是和 `initWithNibName:bundle:` 初始化得到的 UI 一致的。原因是 `init` 方法最终都会调到指定构造器 `initWithNibName:bundle:`，但此时 `nibName` 为 `nil`，而且没有 VC 复写 `loadView` 的情况下，则系统会有一套自己的寻找机制来看是否有对应的 xib 文件，如果有，则加载 xib 文件。具体可参考苹果官方文档的[解释](https://developer.apple.com/documentation/uikit/uiviewcontroller/1621487-nibname?language=objc)：
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/9-1.JPG?raw=true)
+
+
+iOS 清理 cookies
+----------
+
+在手机端开发 `web` 页面时，有时候我们可能需要删除一些 `cookie` 值。JS 删除 `cookie` 主要是将 `cookie` 的 `expires` 属性设置为一个早于当前时间的值。不过如果 `cookie` 是 `HttpOnly` 的话，表示这个 `cookie` 值不能通过非 `HTTP` 方式来访问，而无法通过 JS 来访问，`document.cookie` 获取不到，所以也无法通过 JS 来删除这样的 `cookie` 值。
+
+不过除了通过 `server` 端来处理外，我们也可以借助 `native` 端来执行删除操作。iOS 端使用 `NSHTTPCookie` 对象来表示一个 `cookie` ，并通过 `NSHTTPCookieStorage` 来管理当前应用的所有 `cookie`，包括 `HttpOnly/secure` 类型的 `cookie` 。所有想要删除 `cookie` ，只需要依据给定的条件(如域、path等属性)来找出对应的 `NSHTTPCookie` 对象，并删除就行。以下代码是清空当前应用程序所有 `cookie` 的操作：
+
+```objc
+NSArray<NSHTTPCookie *> *cookies = [NSHTTPCookieStorage sharedHTTPCookieStorage].cookies;
+for (NSHTTPCookie *cookie in cookies) {
+	[[NSHTTPCookieStorage sharedHTTPCookieStorage] deleteCookie:cookie];
+}
+```
+
+当然，如果要在 `web` 端触发操作，还需要提供 `Hybrid` 接口。
+
+判断子类是否实现父类的方法
+----------
+
+想在程序运行时判断一个子类是否实现了父类的某个方法，可以比较两个类对应方法的指针是否相等。以 `-init` 方法为例，如下代码所示:
+
+```objc
+@interface Test: NSObject
+@end
+
+@implementation Test
+@end
+
+BOOL check() {
+    SEL sel = @selector(init);
+    IMP baseInit = [NSObject instanceMethodForSelector:sel];
+    IMP testInit = [Test instanceMethodForSelector:sel];
+    
+    return baseInit == testInit;
+}
+
+NSLog(@"%@", check() ? @"true" : @"false");			// true
+```
+
+按照 `Objective-C` 查找方法的规则，对象会先在自己的方法列表中查找，如果有，则调用；如果没有，则向上去父类里面查找，依此一直到 `NSObject`。
+
+需要注意的是，如果是多层继承体系，即使某个子类没有实现某个方法，也不能确定这个子类和某个父类是同一个实现，如下代码所示：
+
+```objc
+@interface Base: NSObject
+@end
+
+@implementation Base
+
+- (id)init {
+    return [super init];
+}
+
+@end
+
+@interface Test: Base
+@end
+
+@implementation Test
+@end
+
+BOOL check() {
+    SEL sel = @selector(init);
+    IMP baseInit = [NSObject instanceMethodForSelector:sel];
+    IMP testInit = [Test instanceMethodForSelector:sel];
+    
+    return baseInit == testInit;	
+}
+
+NSLog(@"%@", check() ? @"true" : @"false");         // false
+```
+
+判断子类是否实现父类的方法
+
+想在程序运行时判断一个子类是否实现了父类的某个方法，可以比较两个类对应方法的指针是否相等。以-init方法为例，如下代码所示:
+
+```objc
+@interface Test: NSObject
+@end
+
+@implementation Test
+@end
+
+BOOL check() {
+    SEL sel = @selector(init);
+    IMP baseInit = [NSObject instanceMethodForSelector:sel];
+    IMP testInit = [Test instanceMethodForSelector:sel];
+    
+    return baseInit == testInit;
+}
+
+NSLog(@"%@", check() ? @"true" : @"false");			// true
+```
+
+按照Objective-C查找方法的规则，对象会先在自己的方法列表中查找，如果有，则调用；如果没有，则向上去父类里面查找，依此一直到NSObject。
+
+需要注意的是，如果是多层继承体系，即使某个子类没有实现某个方法，也不能确定这个子类和某个父类是同一个实现，如下代码所示：
+
+```objc
+@interface Base: NSObject
+@end
+
+@implementation Base
+
+- (id)init {
+    return [super init];
+}
+
+@end
+
+@interface Test: Base
+@end
+
+@implementation Test
+@end
+
+BOOL check() {
+    SEL sel = @selector(init);
+    IMP baseInit = [NSObject instanceMethodForSelector:sel];
+    IMP testInit = [Test instanceMethodForSelector:sel];
+    
+    return baseInit == testInit;	
+}
+
+NSLog(@"%@", check() ? @"true" : @"false");         // false
+```
+
+[ParsifalC](https://m.weibo.cn/u/2623148742)童鞋之前也分享过相关的内容，提供了几种方法，具体可以参考[这里](https://m.weibo.cn/status/4087697620330623)
+
+Git恢复被删除的Stash代码
+----------
+
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+`Git` 的 `Stash` 功能很方便的帮我们存一些临时代码，如果不小心把 `Stash` 代码删除了如何恢复呢？使用 `git fsck --lost-found` 查看我们最近删除的 `Stash` ；找到你需要恢复的 `dangling commit`（只需关注 `dangling commit` ）；再使用 `git merge` 命令即可恢复。如下两图所示：
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/12-1.JPG?raw=true)
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/12-2.JPG?raw=true)
+
+
+使用NSLog可能出现的安全问题
+----------
+
+**作者**: [iOS_OneByte](https://weibo.com/u/5549095051)
+
+iOS 经常定义类似如下的输出宏:
+
+```objc
+#ifdef DEBUG
+	#define ZJLog(fmt, ...) NSLog((fmt), ##__VA_ARGS__)
+#else
+	#define ZJLog(...)
+#endif
+```
+
+但是大部分人可能只是遵循国际惯例，并不知道如果直接使用 `NSLog` 的危害或者如何去查看别人家的应用输出，其实很简单，只是 `Xcode` 隐藏的很深,路径如下
+
+```
+Xcode8 - Window - Devices
+Xcode9 - Window - Devices And Simulators
+```
+
+如下图所示：
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/13-2.JPG?raw=true)
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/13-3.JPG?raw=true)
+
+这个利用好的话,对于调试自己或者查(po)看(jie)别人家的应用都很有用,效果如下图所示：
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/13-4.JPG?raw=true)
+
 
 
