--- a/2017/11.md
+++ b/2017/11.md
@@ -410,5 +410,115 @@ Xcode9 - Window - Devices And Simulators
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/13-4.jpg?raw=true)
 
+pod install 和 pod update 的区别
+----------
+
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+首先 `podfile.lock` 和 `podfile` 必须加入版本控制。
+
+`install` 并不是第一次创建 `podfile` 时运行一次，后面就不再使用了。`install` 命令不仅在初始时使用，在新增或删除 `repo` 时也需要运行。每次添加或删除 `repo` 后应该执行 `install` 命令，这样其它的 `repo` 不会更新。`update` 仅仅在只需更新某一个 `repo` 或所有时才使用。每次执行 `install` 时，会将每个 `repo` 的版本信息写入到 `podfile.lock`，已存在于 `podfile.lock` 的 `repo` 不会被更新只会下载指定版本，不在 `podfile.lock` 中的 `repo` 将会搜索与 `podfile` 里面对应 `repo` 匹配的版本。即使某个 `repo` 指定了版本，如 `pod 'A', '1.0.0'`，最好也是不要使用 `update`，因为 `repo A` 可能有依赖，如果此时使用 `update` 会更新其依赖。
+
+参考：
+
+1. [pod install vs. pod update](https://guides.cocoapods.org/using/pod-install-vs-update.html)
+
+利用Attach方式调试推送、Today、3DTouch
+----------
+
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+在调试推送、`Today`、`3DTouch` 等唤起测试 App 的时候（此时App未启动），我们通常 `Run` 的方式是不行的，因为 `Run` 后 `App` 就启动了，不满足调试环境。`Xcode` 为我们提供了 `Attach` 的方式进行调试，使用起来也是超简单的。操作方式如下：
+
+前提：已经加了断点（比如 `application: didFinishLaunchingWithOptions:` 方法里加断点）
+
+* `Attach` 之前需要把测试 `App` 的进程杀掉（如果不杀掉进程，这种方式是无法断点调试的）；
+
+* 选择你要 `Attach` 的测试 `App` ,有两种方式：在 `Debug` 下拉菜单下面有 `Attach to Process` 选项（直接选择你的测试 `App`，如图1）和 `Attach to Process by PID or Name` 选项（输入名称，如图2）；
+
+![15-1](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/15-1.jpg?raw=true)
+
+![15-2](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/15-2.jpg?raw=true)
+
+* 用推送、`Today`、`3DTouch` 等方式唤起，就大功告成了，如下图所示
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/15-2.jpg?raw=true)
+
+为什么我放弃使用系统自带的终端
+----------
+
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+用过 `iTerm` 后，我再也不想使用系统自带的终端了。 `iTerm` 是终端的一个替代品，而且开源免费。它支持非常棒的特性：
+
+- 设置一个可爱的背景图 `Preference -> Profiles -> Window -> Background Image` ，如下图所示；
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/16-1.png?raw=true)
+
+- `Hotkey Window`，让终端立刻出现在你的面前。比如当你使用 `Xcode` 正在编码时，这时需要执行 `Pod install`，使用快捷键 `command+i`（需要设置） 直接调出 `iTerm`；
+
+- 选择即复制，当你选择终端中的文本后，它会自动复制；
+
+- 点击可跳转，如下图中，按住 `command` 并点击 `/Users/apple/Desktop/project/lefeDemo` 就会跳转到这个文件夹下。 按住 `command` 并点击 `www.baidu.com`，就会在浏览器中打开 `www.baidu.com`;
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/16-2.png?raw=true)
+
+- 自动提示你所输过的命令，这样可以快速输入你所敲过的命令；
+
+- 快照功能，可以回退到某一时刻你所输过的命令；
+
+想了解 iTerm 更多特性，可以查看 [官网](https://iterm2.com/features.html)
+
+当 iTerm 遇上 ZSH，他们相爱了
+----------
+
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+> Your terminal never felt this good before.
+
+上一条 `iOS知识小集` 主要说了下使用 `iTerm` 可以改善我们的终端，评论中 [@CrespoXiao](https://weibo.com/crespoxiao) 和 [@struggleend](https://weibo.com/u/3106903737) 提到了 `iTerm + ZSH` 使用起来更方便。搜了下 `ZSH`，发现 Star 数 62476 个，确实是好东西，和大家分享下，目前使用时间不长，姑且总结几条我认为比较好的，有熟悉的同学在评论中分享给大家吧 🤝，相信同学们不会吝啬的。[安装看这里](https://github.com/robbyrussell/oh-my-zsh/) 。`Oh My Zsh` 它是基于 zsh 命令行的一个扩展工具集。
+
+提示：根目录下有 `~/.zshrc` 文件，可以修改配置，比如主题，插件等。
+
+- 设置一个主题，如果你有洁癖，选择一个你认为比较好的[主题](https://github.com/robbyrussell/oh-my-zsh/wiki/Themes) ；
+- 使用插件，比如有 Git 插件，当记不住命令的时候，按 Tab 键可以提示，比如 `git p [tab]` 将会提示，如下图所示；
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/17-1.png?raw=true)
+
+- 支持简写，比如省略 cd，回到上级目录直接输入：.. ；
+- `ls *.jpeg`  显示当前目录下所有 jpeg 文件；
+- `cd <TAB>` 简显示当前目录下的文件，继续按 <TAB> 可以选择你所要进入的目录；
+- `git <UP>` 可以找到最近输入的 Git 命令；
+
+想了解 `ZSH` 更多特性，可以查看 [官网](http://ohmyz.sh/)
+
+NSFetchedResultsController兼容性问题
+----------
+
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+熟悉 `CoreData` 的都知道 `NSFetchedResultsController` 这个类，与 `tableView` 和 `collectionView` 结合起来使用非常方便。
+
+但是这个类在 `iOS10` 中有个比较坑爹的地方，如果使用的是下图的方式初始化
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/18-1.jpg?raw=true)
+
+并且传入的 `cacheName` 不为 `nil`，那么在 `iOS10` 下面可能会产生各种莫名其妙的崩溃。详细原因如下图描述：
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/11/18-2.jpg?raw=true)
+
+简单翻译一下就是：修改了 `vc` 的 `fetchRequest` 之后，`context` 的 `save` 操作会打开一个或多个文件描述符，当打开的文件描述符数目超过`255`(真机)后，后续的资源加载都会导致崩溃。
+
+当初遇到这个问题的时候，整个应用都处于随机崩溃的情况，看日志都是加载 `storyboard` 或者 `xib` 等资源时的崩溃，但是死活复现不出来，看崩溃日志也找不到原因。然后无意间发现 `Xcode console` 中一直不断输出如下警告信息：
+
+```objc
+(NSFetchedResultsController): couldn't read cache file to update store info timestamps
+```
+
+然后 google 了一下，找到了一个相同的问题，并且有完整的复现 `Demo` 及复现步骤，然后全局代码搜索果然发现有一个地方初始化的时候传入了 `cacheName`，将其置 `nil` 后就再也没有那段 `warning` 同时上线之后也没有再收到资源加载的崩溃了。
+
+所以 `Xcode` 的 `warning` 还是值的注意的。附上这个 `radar` 的[链接](http://www.openradar.me/28361550)，里面包含 `Demo` 地址。
+
+今天再去复现的时候，试了两台 `iOS10` 的设备，`Xcode 9.1` 下 `iPhone5S iOS10.2` 这个 bug 已经不存在了，但是 `iPhone7 iOS10.0` 还是存在的。
 
 
