--- a/2017/目录.md
+++ b/2017/目录.md
@@ -107,4 +107,14 @@
 * [11. 判断子类是否实现父类的方法](https://github.com/southpeak/iOS-tech-set/blob/master/2017/11.md)
 * [12. Git恢复被删除的Stash代码【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/11.md)
 * [13. 使用NSLog可能出现的安全问题【iOS_OneByte】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/11.md)
+* [14. pod install 和 pod update 的区别【Vong_HUST】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/11.md)
+* [15. 利用Attach方式调试推送、Today、3DTouch【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/11.md)
+* [16. 为什么我放弃使用系统自带的终端【Lefe_x】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/11.md)
+* [17. 当 iTerm 遇上 ZSH，他们相爱了【Lefe_x】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/11.md)
+* [18. NSFetchedResultsController兼容性问题【Vong_HUST】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/11.md)
+
+## 12
+
+* [1. iOS中的mach\_continuous\_time()方法【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/12.md)
+
 
