添加12月第二周内容

--- a/2017/12.md
+++ b/2017/12.md
@@ -27,3 +27,174 @@ iOS中的mach\_continuous\_time()方法
 
 比较好理解。希望能帮助到大家！
 
+objc_getClass和object_getClass
+----
+
+**作者**: [南峰子_老驴](https://weibo.com/touristdiary)
+
+昨天打开好久没开的公众号后台，看到一个小伙伴 [@阳光下的小泡沫星人002](https://weibo.com/u/5848750701) 给我留言，指正我之前写的关于Runtime的[文章](http://southpeak.github.io/2014/10/25/objective-c-runtime-1/) 中一个错误之处，并为此写了一篇[文章](http://www.jianshu.com/p/d0c6a3efb4d4) 在此感谢。
+
+这个错误是关于获取 `NSObject` 的元类的 `isa` 指针的问题。在我的文章中，错误的用 `objc_getClass((__bridge void *)[NSObject class])` 这种方式来获取对象的指针。代码如下：
+
+```objc
+void TestMetaClass(id self, SEL _cmd) {
+    NSLog(@"This objcet is %p", self);
+    NSLog(@"Class is %@, super class is %@", [self class], [self superclass]);
+    Class currentClass = [self class];
+    for (int i = 0; i < 4; i++) {
+        NSLog(@"Following the isa pointer %d times gives %p", i, currentClass);
+        currentClass = objc_getClass((__bridge void *)currentClass);
+    }
+    NSLog(@"NSObject's class is %p", [NSObject class]);
+    NSLog(@"NSObject's meta class is %p", objc_getClass((__bridge void *)[NSObject class]));  // 0x0
+}
+```
+
+实际上 `objc_getClass` 的参数是类名的字符串，获取指定类的类对象。上述代码中 `(__bridge void *)[NSObject class])` 的结果并不是类名的字符串，而是一个对象的指针，所以 `objc_getClass` 函数返回值的相当于是一个 `nil`，打印指针的值就是 `0x0`。所以正确使用 `objc_getClass` 的方式应该是`objc_getClass("NSObject")`，其效果与 `[NSObject class]` 是一样的。
+
+要想获取 `NSObject` 类对象的元类，可以使用 `object_getClass` 函数。这个函数参数是 `id` 类型，即一个对象，返回对象的 `Class` 信息，即对象的 `isa` 指针；如果传入的是一个类对象，获取的就是元类信息。
+
+所以正确的代码如下，`for` 循环中的输出结果也印证了 `NSObject` 元类的isa指向的是其本身。
+
+```objc
+void TestMetaClass(id self, SEL _cmd) {
+    NSLog(@"This objcet is %p", self);
+    NSLog(@"Class is %@, super class is %@", [self class], [self superclass]);
+    Class currentClass = [self class];
+    for (int i = 0; i < 4; i++) {
+        NSLog(@"Following the isa pointer %d times gives %p", i, currentClass);
+        currentClass = object_getClass(currentClass);
+    }
+        
+    // Following the isa pointer 0 times gives 0x10048e1f0
+    // Following the isa pointer 1 times gives 0x10048e220
+    // Following the isa pointer 2 times gives 0x7fff8c8e50f0
+    // Following the isa pointer 3 times gives 0x7fff8c8e50f0
+    NSLog(@"NSObject's class is %p", [NSObject class]);
+    NSLog(@"NSObject's meta class is %p", object_getClass([NSObject class]));      
+        
+    // NSObject's class is 0x7fff8c8e5140
+    // NSObject's meta class is 0x7fff8c8e50f0
+}
+```
+
+由于博客已停更，错误之处可以在微博上私信。还请阅读的时候不要盲从。
+
+Gerrit 是阻挡不了你使用 SourceTree
+----
+
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+当我们提交的代码需要 Review 的时候，需要用到 Gerrit，具体关于 Gerrit 的介绍可以看 [这里]
+(https://gerrit-review.googlesource.com/Documentation/) 。使用 Gerrit 后，执行 `push` 操作的时候，不能直接使用 `git push` 命令，也就说你不能使用 `SourceTree` 的 `Push` 功能，只能在终端乖乖的输入 `git push origin HEAD:refs/for/dev` 。有些同学可能会问，我特别想使用 `SourceTree` ，不想使用终端命令，有没有好的方法？其实，`SourceTree` 提供了一个功能：【自定义操作】（SourceTree -- 偏好设置 -- 自定义操作 -- 添加），导入事先写好的脚本。还可以设置一个快捷键（这里设置了 cmd+p）。脚本如下：
+
+```
+#!/bin/bash
+cd /Users/wangsuyan/Desktop/iOS
+git push origin HEAD:refs/for/Dev0.0.1
+```
+
+备注：记得给脚本执行权限。
+如果你没有给自定义的操作设置快捷键，可以通过【动作 -- 自定义操作】选择执行你的 Action。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/12/3-1.jpg?raw=true)
+
+这样，当你 push 的时候直接 `cmd+p` 即可提交你的代码，是不是很爽。当然你可以写一些其它的脚本，并自定义为 Action ，来提高你的工作效率。你可以看我以前写的 [脚本教程] (http://www.jianshu.com/p/8a975f358de8) 。
+
+是谁调了我的底层库
+----
+
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+调试的时候，往往底层库会埋一些 `NSLog` 来调试，使用下面这种方式打印出来的函数名称 `__PRETTY_FUNCTION__` 是底层库的函数名。
+
+```
+#   define LEFLog(fmt, ...) NSLog((@"%s (%d) => " fmt), __PRETTY_FUNCTION__, __LINE__, ##__VA_ARGS__)
+```
+
+打印是这样的：+[Network post] 中打印了 `I am a log`，而不清楚是谁调用了。
+
+`+[Network post] (22) => I am a log`
+
+但是，我想要的是我在最顶层调用时的函数名，这样我可以很容易的看到是那个方法调用了底层库。
+
+不太理解？举个例子吧：
+每个 APP 都会有一个网络层，业务层会直接与网络层进行交互。调试的时候，我想知道 A 请求是在哪个页面中的哪个函数被调用了，咋么办？前提是 `NSLog` 在底层库。我们可以这样实现：
+
+```
+@implementation LEFLog
++ (NSString *)lastCallMethod
+{
+    NSArray *symbols = [NSThread callStackSymbols];
+    NSInteger maxCount = symbols.count;
+    NSString *secondSymbol = maxCount > 2 ? symbols[2] : (maxCount > 1 ? symbols[1] : [symbols firstObject]);
+    if (secondSymbol.length == 0) {
+        return @"";
+    }
+    
+    NSString *pattern = @"[+-]\\[.{0,}\\]";
+    NSError *error;
+    NSRegularExpression *express = [NSRegularExpression regularExpressionWithPattern:pattern options:kNilOptions error:&error];
+    if (error) {
+        NSLog(@"Error: %@", error);
+        return @"";
+    }
+    
+    NSTextCheckingResult *checkResult = [[express matchesInString:secondSymbol options:NSMatchingReportCompletion range:NSMakeRange(0, secondSymbol.length)] lastObject];
+    NSString *findStr = [secondSymbol substringWithRange:checkResult.range];
+    return findStr ?: @"";
+}
+
+@end
+```
+
+然后定义一个宏：
+
+```
+#   define LEFLog(fmt, ...) NSLog((@"%@, %s (%d) => " fmt), [LEFLog lastCallMethod], __PRETTY_FUNCTION__, __LINE__, ##__VA_ARGS__
+```
+
+打印结果是这样的：在 `LefexViewController`  中的 `viewDidLoad` 调用了 `Network ` 的 `post` 方法，并打印 `I am a log`.
+
+```
+-[LefexViewController viewDidLoad], +[Network post] (22) => I am a log
+```
+
+指定构造器在 UITableViewController 中的坑
+----
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+我们都知道，如果我们想要自定义指定构造器时，应该要遵循以下3个原则(图1)：
+1、子类指定构造器必须调用父类指定构造器
+2、便捷构造器只能通过调用自身指定构造器来完成初始化
+3、指定构造器必须要用 `NS_DESIGNATED_INITIALIZER` 标示
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/12/5-1.jpg?raw=true)
+但是如果你继承了 UITableViewController，并且自定义了指定构造器，而你的项目刚好要支持 iOS8 的话，在 iOS8 下就会出现一个必崩的 bug。示例代码及简单解释见图2。
+有人提了对应的 radar http://www.openradar.me/23709930， stackoverflow 上也有对应的详尽解释 https://stackoverflow.com/a/30719434 更多内容可查看 http://t.cn/RX978vi
+目前唯一的解决方案就是不继承 UITableViewController，而是继承自 UIViewController 然后持有一个 UITableView😂
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/12/5-2.jpg?raw=true)
+
+
+为断点加条件和简单命令
+----
+
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+今天主要给大家介绍一个如何给断点加条件和命令来提高我们的调试效率。例如：一个for循环，在第n次循环的时候有一个bug，这个时候条件断点就有了用武之地，通过右击断点，选择编辑断点；
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/12/6-1.jpg?raw=true)
+
+我们可以设置`Condition：i= n`，直接断到我们想要调试的那次循环；
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/12/6-2.jpg?raw=true)
+
+或者也可以用`Ignore`功能来设置忽略前面不关心的循环；
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/12/6-3.jpg?raw=true)
+
+通过设置Action功能还可以在断点处执行一些简单的命令、打印日志、播放声音、执行脚本等，
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/12/6-4.jpg?raw=true)
+
+让调试变的欢乐起来吧！
+
