--- a/2017/目录.md
+++ b/2017/目录.md
@@ -116,5 +116,10 @@
 ## 12
 
 * [1. iOS中的mach\_continuous\_time()方法【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/12.md)
+* [2. objc_getClass和object_getClass【南峰子_老驴】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/12.md)
+* [3. Gerrit 是阻挡不了你使用 SourceTree【Lefe_x】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/12.md)
+* [4. 是谁调了我的底层库【Lefe_x】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/12.md)
+* [5. 指定构造器在 UITableViewController 中的坑【Vong_HUST】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/12.md)
+* [6. 为断点加条件和简单命令【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2017/12.md)
 
 
