修改一处链接格式不对的问题

--- a/2017/12.md
+++ b/2017/12.md
@@ -170,7 +170,7 @@ git push origin HEAD:refs/for/Dev0.0.1
 3、指定构造器必须要用 `NS_DESIGNATED_INITIALIZER` 标示
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/12/5-1.jpg?raw=true)
 但是如果你继承了 UITableViewController，并且自定义了指定构造器，而你的项目刚好要支持 iOS8 的话，在 iOS8 下就会出现一个必崩的 bug。示例代码及简单解释见图2。
-有人提了对应的 radar http://www.openradar.me/23709930， stackoverflow 上也有对应的详尽解释 https://stackoverflow.com/a/30719434 更多内容可查看 http://t.cn/RX978vi
+有人提了对应的 [radar](http://www.openradar.me/23709930)， stackoverflow 上也有对应的[详尽解释](https://stackoverflow.com/a/30719434) 更多内容可[查看](http://t.cn/RX978vi)
 目前唯一的解决方案就是不继承 UITableViewController，而是继承自 UIViewController 然后持有一个 UITableView😂
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/12/5-2.jpg?raw=true)
 
